# go_web_tools

./: .gitignore  ANALYTICS_INTEGRATION_PLAN.md  CHECKBOX_FIX_REPORT.md  Dockerfile  ECHARTS_INTEGRATION_ANALYSIS.md  LOCAL_DEBUG_AND_MERGE.md  LOGIN_FEATURE_SUMMARY.md  LOGIN_SYSTEM.md  MULTI_CONFIG_GUIDE.md  Makefile  PHASE5_DATA_CONVERGENCE_HISTORY.md  PROJECT.md  PR_BODY.md  QUICKSTART.md  README.md  YAML_CLEANUP_SUMMARY.md  alpine-3.18.tar  build.sh  clean.md  config.example.yaml  config.yaml  docker-compose.yml  example.html  go.mod  go.sum  hello.py  hr_forms.yaml  init.sh  marketing_forms.yaml  project_forms.yaml  project_info.yaml  proxy_check.sh  publish.sh  pyproject.toml  release.sh  running.yaml  survey_forms.yaml  validate.sh
.github/workflows/: build-and-publish-bi.yml
bi/: Dockerfile  README.md  README_DOCKER.md  app.py  logic.py  pyproject.toml  requirements.txt
bi/core/: chart_engine.py  data_loader.py  pivot_engine.py  table_tools.py
bi/pages/: 01_gantt.py
bi/plugins/: __init__.py  area_chart.py  bar_chart.py  boxplot_chart.py  demo.csv  distribute_density_chart.py  gantt_altair.py  heatmap_chart.py  histogram_chart.py  line_chart.py  map_chart.py  pie_chart.py  scatter_chart.py
cmd/: check.go
cmd/generate/: main.go
cmd/server/: main.go
data/uploads/reports/: report_1776914596935085877_sample.csv.html
docs/: REPO_MAINTENANCE.md
docs/analytics/: openapi.yaml
docs/analytics/schemas/: api-error-response.schema.json  validation-error-response.schema.json  (+1 more)
docs/cleanup/: README.md  change-log.md  phase-0-log.md  phase-1-log.md
go-server/: .dockerignore  Dockerfile  go.mod  main.go
internal/config/: app.go  config.go  config_test.go  router.go
internal/handler/: handler.go
internal/models/: database.go  database_test.go  fields.go
internal/utils/: form_generator.go  form_generator_test.go
ops/bi/: app.py  pyproject.toml  requirements.txt
ops/shiny/: app.R  plumber.R  render_report.R  report.qmd
tauri-vue-bi/: Makefile  README.md  package-lock.json
tauri-vue-bi/src/: App.vue
tauri-vue-bi/src-tauri/: Cargo.toml  tauri.conf.json
tauri-vue-bi/src-tauri/src/: commands.rs  lib.rs
ui/: assets.go
ui/frontend/: index.html
ui/templates/: admin.html  form.html  index.html  login.html
vue-form/: README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
vue-form/e2e/: vue.spec.ts
vue-form/src/: App.vue  App.vue.js
vue-form/vue-form/: package-lock.json
(+158 files in other folders)
